--- a/Roman-Test.Rmd
+++ b/Roman-Test.Rmd
@@ -256,7 +256,6 @@ intern_wdbc <- clValid(wdbc, 2:6, clMethods = c("kmeans", "hierarchical", "pam")
 summary(intern_wdbc)
 ```
 
-
 ```{r}
 op <- par(no.readonly = TRUE)
 par(mfrow = c(2, 2), mar = c(4, 4, 3, 1))
@@ -270,15 +269,13 @@ par(op)
 ```
 
 ## 3.2. Stability Validation
-
 ```{r}
 # Perform stability validation
 stab_wdbc <- clValid(wdbc, 2:6, clMethods = c("hierarchical", "kmeans", "pam"), validation = "stability")
 
 # Display the optimal scores using the optimalScores method
 optimal_scores_stab <- optimalScores(stab_wdbc)
-print(optimal_scores_stab)
-
+optimal_scores_stab
 ```
 
 
@@ -434,7 +431,7 @@ fviz_dend(
   rect_fill = TRUE,
   label_cols = "black",
   label_cex = 0.5,
-  main = "Average ward.D2 Dendrogram"
+  main = "Ward D2 Linkage Dendrogram"
 ) + theme_minimal()
 ```
 
@@ -445,27 +442,27 @@ cor(res.dist, cophenetic(hc_ward_d2))
 
 ## 3. Comparison between Dendrogram
 ```{r}
-dend_complete <- cars %>%
+dend_complete <- mtcars %>%
   dist %>%
   hclust("complete") %>%
   as.dendrogram
-dend_single <- cars %>%
+dend_single <- mtcars %>%
   dist %>%
   hclust("single") %>%
   as.dendrogram
-dend_average <- cars %>%
+dend_average <- mtcars %>%
   dist %>%
   hclust("average") %>%
   as.dendrogram
-dend_centroid <- cars %>%
+dend_centroid <- mtcars %>%
   dist %>%
   hclust("centroid") %>%
   as.dendrogram
-dend_ward <- cars %>%
+dend_ward <- mtcars %>%
   dist %>%
   hclust("ward.D") %>%
   as.dendrogram
-dend_ward2 <- cars %>%
+dend_ward2 <- mtcars %>%
   dist %>%
   hclust("ward.D2") %>%
   as.dendrogram
@@ -478,8 +475,8 @@ dend_list <- dendlist(
   "Single" = dend_single,
   "Average" = dend_average,
   "Centroid" = dend_centroid,
-  "Ward" = dend_ward,
-  "Ward2" = dend_ward2
+  "WardD" = dend_ward,
+  "WardD2" = dend_ward2
 )
 
 cors <- cor.dendlist(dend_list)
@@ -497,37 +494,47 @@ corrplot(cors, "pie", "lower")
 ```{r}
 # Agglomerative Nesting (Hierarchical Clustering)
 res.agnes <- agnes(
-  x = cars, # data matrix
+  x = mtcars, # data matrix
   stand = TRUE, # Standardize the data
   metric = "manhattan", # metric for distance matrix
   method = "ward" # Linkage method
 )
 
-fviz_dend(res.agnes, cex = 0.6, k = 2)
+fviz_dend(
+  res.agnes,
+  cex = 0.5,
+  k = 2,
+  k_colors = "jco",
+  rect = TRUE,
+  rect_border = "jco",
+  rect_fill = TRUE,
+  label_cols = "black",
+  label_cex = 0.5,
+  main = "Hierarchical Nested Clustering Dendrogram"
+) + theme_minimal()
 ```
 
 
 ```{r}
 # Divisive Analysis Clustering
 res.diana <- diana(
-  x = cars, # data matrix
+  x = mtcars, # data matrix
   stand = TRUE, # standardize the data
   metric = "manhattan" # metric for distance matrix
 )
 
-fviz_dend(res.diana, cex = 0.6, k = 2)
-```
-
-
-```{r}
 fviz_dend(
-  hc_ward_d,
-  k = 2, # Cut in four groups
-  cex = 0.5, # label size
-  palette = "jco",
-  color_labels_by_k = TRUE, # color labels by groups
-  rect = TRUE # Add rectangle around groups
-)
+  res.diana,
+  cex = 0.5,
+  k = 2,
+  k_colors = "jco",
+  rect = TRUE,
+  rect_border = "jco",
+  rect_fill = TRUE,
+  label_cols = "black",
+  label_cex = 0.5,
+  main = "Divisive Clustering Dendrogram"
+) + theme_minimal()
 ```
 
 ## 6. Internal Validation
